--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -7,100 +7,158 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:text="Регистрация"
-        android:textColor="@color/black"
-        android:textSize="19sp" />
+    <Toolbar
+        android:id="@+id/reg"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:background="@color/toolbar_color"
+        android:title="Регистрация"
+        android:titleTextColor="@color/text_color2"/>
 
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/linear_layout"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
+        android:layout_centerInParent="true">
 
-        <ru.senya.pixateka.view.InputField
-            android:id="@+id/input_email"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:inputType="textEmailAddress"
-            app:hint="Адрес электронной почты"
-            app:hint_color="@color/hint_color"
-            app:src="@drawable/pfp"
-            app:title="Email address" />
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-        <ru.senya.pixateka.view.InputField
-            android:id="@+id/input_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            app:hint="Пароль"
-            app:hint_color="@color/hint_color"
-            app:src="@drawable/password"
-            app:title="Password" />
+            <LinearLayout
+                android:id="@+id/linear_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp">
 
-        <ru.senya.pixateka.view.InputField
-            android:id="@+id/input_repeat_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            app:hint="Подтвердите пароль"
-            app:hint_color="@color/hint_color"
-            app:src="@drawable/password"
-            app:title="Repeat password" />
+                <ru.senya.pixateka.view.InputField
+                    android:id="@+id/input_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:inputType="textEmailAddress"
+                    app:hint="Ваш логин"
+                    app:hint_color="@color/hint_color"
+                    app:src="@drawable/pfp"
+                    app:title="Логин" />
 
-        <CheckBox
-            android:id="@+id/checkbox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Принимаю условия пользовательского соглашения"
-            android:textAlignment="textStart" />
+                <ru.senya.pixateka.view.InputField
+                    android:id="@+id/input_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    app:hint="Ваш пароль"
+                    app:hint_color="@color/hint_color"
+                    app:src="@drawable/password"
+                    app:title="Пароль" />
 
-        <!--<ru.senya.pixateka.view.InputField
-            android:id="@+id/inputNickname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            app:hint="nAmE"
-            app:hint_color="@color/hint_color"
-            app:title="Nickname" /> -->
-        <Button
-            android:id="@+id/button_enter"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:backgroundTint="@color/button"
-            android:text="Войти"
-            android:textColor="@color/white" />
+                <ru.senya.pixateka.view.InputField
+                    android:id="@+id/input_repeat_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    app:hint="Подтвердите пароль"
+                    app:hint_color="@color/hint_color"
+                    app:src="@drawable/password"
+                    app:title="Повторный пароль" />
+
+                <ru.senya.pixateka.view.InputField
+                    android:id="@+id/input_first_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    app:hint="Ваше имя"
+                    app:hint_color="@color/hint_color"
+                    app:title="Имя" />
+
+                <ru.senya.pixateka.view.InputField
+                    android:id="@+id/input_country"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    app:hint="Ваша страна"
+                    app:hint_color="@color/hint_color"
+                    app:title="Страна" />
+
+                <ru.senya.pixateka.view.InputField
+                    android:id="@+id/input_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    app:hint="Ваша почта"
+                    app:hint_color="@color/hint_color"
+                    app:title="Почта" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.makeramen.roundedimageview.RoundedImageView
+                        android:id="@+id/choosePhotoImg"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/baseline_image_24" />
+
+                    <Button
+                        android:id="@+id/choosePhotoBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:backgroundTint="@color/button"
+                        android:gravity="center"
+                        android:text="Выбрать фото"
+                        android:textAlignment="center"
+
+                        android:textColor="@color/white"
+                        android:textSize="17sp" />
+                </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/switcher"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="У меня уже есть аккаунт" />
+                <CheckBox
+                    android:id="@+id/checkbox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Принимаю условия пользовательского соглашения"
+                    android:textAlignment="textStart" />
 
 
-    </LinearLayout>
+                <Button
+                    android:id="@+id/button_enter2"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:backgroundTint="@color/button"
+                    android:text="Войти"
+                    android:textColor="@color/white" />
 
-    <TextView
-        android:id="@+id/wrong"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linear_layout"
-        android:layout_centerHorizontal="true"
-        android:text="Что-то неверно!"
-        android:textColor="@color/red"
-        android:visibility="gone"
-        tools:visibility="visible" />
+
+                <Button
+                    android:id="@+id/button_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:backgroundTint="@color/button"
+                    android:text="У меня уже есть аккаунт"
+                    android:textColor="@color/white" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/wrong"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/linear_layout"
+                android:layout_centerHorizontal="true"
+                android:text="Что-то неверно!"
+                android:textColor="@color/red"
+                android:visibility="gone"
+                tools:visibility="visible" />
+        </RelativeLayout>
+    </RelativeLayout>
 
 
 </RelativeLayout>
