--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/view"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/fullscreen_pic"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -12,4 +12,4 @@
         app:srcPic="@drawable/a1"
         app:text="text" />
 
-</RelativeLayout>
+</androidx.core.widget.NestedScrollView>
