--- a/app/src/main/res/layout/new_fragment_profile.xml
+++ b/app/src/main/res/layout/new_fragment_profile.xml
@@ -1,153 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/parent"
+    android:id="@+id/swipeContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <FrameLayout
-            android:id="@+id/fragment_edit"
+        <ru.senya.pixateka.view.viewFullscreen
+            android:id="@+id/fragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:visibility="gone" />
 
-        <RelativeLayout
-            android:id="@+id/relative_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <ru.senya.pixateka.view.viewFullscreen
-                android:id="@+id/fragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone" />
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nested_scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <RelativeLayout
-                android:id="@+id/relative"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <FrameLayout
-                    android:id="@+id/backround_frame"
+                    android:id="@+id/fragment_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
+
+                <RelativeLayout
+                    android:id="@+id/relative_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
-                    <ImageView
-                        android:id="@+id/back"
+
+                    <RelativeLayout
+                        android:id="@+id/relative"
                         android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:scaleType="centerCrop"
-                        tools:src="@drawable/example1" />
+                        android:layout_height="match_parent">
 
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/shape" />
-                </FrameLayout>
+                        <FrameLayout
+                            android:id="@+id/backround_frame"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="156dp"
-                    android:layout_height="156dp"
-                    android:layout_below="@id/backround_frame"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="-123dp"
-                    android:elevation="12dp"
-                    app:cardCornerRadius="80dp">
+                            <ImageView
+                                android:id="@+id/back"
+                                android:layout_width="match_parent"
+                                android:layout_height="200dp"
+                                android:background="@color/back" />
 
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@color/white" />
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="200dp"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/shape" />
+                        </FrameLayout>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="156dp"
+                            android:layout_height="156dp"
+                            android:layout_alignBottom="@+id/backround_frame"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginBottom="-3dp"
+                            android:elevation="12dp"
+                            app:cardCornerRadius="80dp">
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:src="@color/white" />
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/pfp_frame"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_alignBottom="@+id/backround_frame"
+                            android:layout_centerHorizontal="true"
+                            android:elevation="12dp"
+                            app:cardCornerRadius="80dp">
+
+                            <ImageView
+                                android:id="@+id/pfp_img"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/pfp" />
 
 
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/pfp_frame"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:layout_below="@id/backround_frame"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="-120dp"
-                    android:elevation="12dp"
-                    app:cardCornerRadius="80dp">
-
-                    <ImageView
-                        android:id="@+id/pfp_img"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/pfp" />
+                        </androidx.cardview.widget.CardView>
 
 
-                </androidx.cardview.widget.CardView>
+                        <LinearLayout
+                            android:id="@+id/bio"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/pfp_frame"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/name"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="1dp"
+                                android:text="Name Surname"
+                                android:textAlignment="center"
+                                android:textColor="@color/text_color"
+                                android:textSize="30sp" />
+
+                            <TextView
+                                android:id="@+id/about"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_margin="1dp"
+                                android:layout_marginHorizontal="5000dp"
+                                android:layout_marginTop="10dp"
+                                android:textAlignment="center"
+                                android:textColor="@color/text_color"
+                                android:textSize="18sp"
+                                android:text="Пользователь еще не заполнил описание" />
+
+                            <Button
+                                android:id="@+id/button_edit_profile"
+                                android:layout_width="220dp"
+                                android:layout_height="60dp"
+                                android:layout_gravity="center"
+                                android:layout_marginVertical="10dp"
+                                android:autoSizeTextType="uniform"
+                                android:backgroundTint="@color/button"
+                                android:text="Редактировать профиль"
+                                android:textColor="@color/white" />
+                        </LinearLayout>
 
 
-                <LinearLayout
-                    android:id="@+id/bio"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/pfp_frame"
-                    android:orientation="vertical">
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recycler_list"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/bio"
+                            android:layout_margin="1dp" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:text="Name Surname"
-                        android:textAlignment="center"
-                        android:textColor="@color/text_color"
-                        android:textSize="30sp" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:text="Birthday"
-                        android:textAlignment="center"
-                        android:textColor="@color/text_color2"
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:textAlignment="center"
-                        android:textColor="@color/text_color2"
-                        android:textSize="18sp"
-                        tools:text="About" />
-                </LinearLayout>
-
-                <Button
-                    android:id="@+id/button_edit_profile"
-                    android:layout_width="220dp"
-                    android:layout_height="60dp"
-                    android:layout_below="@id/bio"
-                    android:layout_centerHorizontal="true"
-                    android:autoSizeTextType="uniform"
-                    android:backgroundTint="@color/button"
-                    android:text="Редактировать профиль"
-                    android:textColor="@color/white" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@+id/button_edit_profile" />
+                    </RelativeLayout>
+                </RelativeLayout>
 
 
             </RelativeLayout>
-        </RelativeLayout>
-
-
+        </androidx.core.widget.NestedScrollView>
     </RelativeLayout>
 
 
-</androidx.core.widget.NestedScrollView>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
