--- a/app/src/main/res/layout/view_fullscreen.xml
+++ b/app/src/main/res/layout/view_fullscreen.xml
@@ -52,50 +52,42 @@
         </LinearLayout>
 
 
-        <View
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="7dp"
-            android:background="#85000000" />
-
-
-        <TextView
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="4dp"
-            android:text="@string/OtherPictures"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:background="@drawable/tab_layout_bg"
+            android:translationZ="10dp"
+            app:tabIndicatorColor="@color/v2"
+            app:tabIndicatorFullWidth="false"
+            app:tabIndicatorHeight="3dp"
+            app:tabTextColor="@color/black" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            android:layout_height="wrap_content">
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:id="@+id/container"
-        android:layout_centerInParent="true"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="invisible" />
 
-        <Space
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"/>
-
-        <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
-            android:layout_weight="1"
-            android:id="@+id/scalable_image"
-            android:background="@color/black"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <Space
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"/>
+            <TextView
+                android:id="@+id/nothing_was_found"
+                android:visibility="invisible"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="Ничего похожего не найдено"
+                android:textColor="@color/text_color"
+                android:textSize="20sp" />
+        </RelativeLayout>
 
     </LinearLayout>
 
