--- a/app/src/main/res/drawable/shape3.xml
+++ b/app/src/main/res/drawable/shape3.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="-90"
-        android:endColor="#FFFFFFFF"
+        android:startColor="@color/toolbar_color"
+        android:endColor="@color/back"
         android:type="linear" />
 </shape>
