--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -1,93 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/selected_photo"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
-        android:adjustViewBounds="true"
-        android:maxHeight="420dp"
-        app:riv_corner_radius="5dp"
-        tools:src="@drawable/example1" />
+        android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/linear_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/selected_photo"
-        android:orientation="vertical"
-        android:paddingHorizontal="10dp">
+        <Toolbar
+            android:id="@+id/mainToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:background="@color/toolbar_color"
+            android:titleTextColor="@color/text_color2" />
 
-        <TextView
-            android:id="@+id/wrongName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Имя не должно быть пустое"
-            android:textColor="@color/red"
-            android:textSize="16sp"
-            android:visibility="invisible" />
 
-        <ru.senya.pixateka.view.InputField
-            android:id="@+id/name"
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/selected_photo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            app:title="Название" />
+            android:layout_below="@id/mainToolbar"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="30dp"
+            android:adjustViewBounds="true"
+            android:maxHeight="350dp"
+            android:src="@drawable/baseline_image_24"
+            app:riv_corner_radius="5dp" />
 
-
-        <ru.senya.pixateka.view.InputField
-            android:id="@+id/description"
+        <LinearLayout
+            android:id="@+id/linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            app:title="Описание" />
+            android:layout_below="@+id/selected_photo"
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp">
+
+            <TextView
+                android:id="@+id/wrongPic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Вы не выбрали фото!"
+                android:textColor="@color/red"
+                android:textSize="16sp"
+                android:visibility="invisible"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/wrongName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Имя не должно быть пустое"
+                android:textColor="@color/red"
+                android:textSize="16sp"
+                android:visibility="invisible"
+                tools:visibility="visible" />
+
+            <ru.senya.pixateka.view.InputField
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                app:src="@color/white"
+                app:title="Название" />
 
 
-        <ru.senya.pixateka.view.InputField
-            android:id="@+id/tags"
+            <ru.senya.pixateka.view.InputField
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                app:src="@color/white"
+                app:title="Описание" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            app:title="Тэги" />
+            android:layout_height="match_parent"
+            android:layout_below="@+id/linear_layout"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ProgressBar
+                android:id="@+id/progress_circular"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                tools:visibility="visible" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="220dp"
+                android:layout_height="60dp"
+                android:layout_marginBottom="30dp"
+                android:backgroundTint="@color/button"
+                android:text="@string/TextUploadPhoto"
+                android:textColor="@color/white" />
+        </LinearLayout>
+    </RelativeLayout>
 
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/linear_layout"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <ProgressBar
-            android:id="@+id/progress_circular"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:visibility="invisible"
-            tools:visibility="visible" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="220dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="30dp"
-            android:backgroundTint="@color/button"
-            android:text="@string/TextUploadPhoto"
-            android:textColor="@color/white" />
-    </LinearLayout>
-
-
-</RelativeLayout>
+</ScrollView>
