--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,8 +11,7 @@
         android:layout_height="52dp"
         android:background="@color/toolbar_color"
         android:title="@string/app_name"
-        android:titleTextColor="@color/text_color2">
-    </Toolbar>
+        android:titleTextColor="@color/text_color2" />
 
 
     <ru.senya.pixateka.view.viewFullscreen
@@ -34,15 +32,24 @@
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/mainToolbar">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/main_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:paddingHorizontal="2dp" />
+
+        <TextView
+            android:id="@+id/nothing_is_here"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Ничего нет"
+            android:textAlignment="center"
+            android:textColor="@color/text_color"
+            android:textSize="23sp" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
