--- a/app/src/main/res/layout/new_fragment_profile.xml
+++ b/app/src/main/res/layout/new_fragment_profile.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipeContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,16 +9,37 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape3"
+            app:title="Профиль"
+            app:titleTextColor="@color/white">
+
+            <Button
+                android:id="@+id/button_logout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="13dp"
+                android:text="Выйти"
+                android:background="#00FFFFFF"
+                android:textColor="@color/white" />
+        </androidx.appcompat.widget.Toolbar>
+
         <ru.senya.pixateka.view.viewFullscreen
             android:id="@+id/fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@+id/toolbar"
             android:visibility="gone" />
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/nested_scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_below="@+id/toolbar">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -68,6 +88,7 @@
                             android:layout_marginBottom="-3dp"
                             android:elevation="12dp"
                             app:cardCornerRadius="80dp">
+
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
@@ -119,10 +140,10 @@
                                 android:layout_margin="1dp"
                                 android:layout_marginHorizontal="5000dp"
                                 android:layout_marginTop="10dp"
+                                android:text="Пользователь еще не заполнил описание"
                                 android:textAlignment="center"
                                 android:textColor="@color/text_color"
-                                android:textSize="18sp"
-                                android:text="Пользователь еще не заполнил описание" />
+                                android:textSize="18sp" />
 
                             <Button
                                 android:id="@+id/button_edit_profile"
@@ -138,6 +159,7 @@
 
 
                         <androidx.recyclerview.widget.RecyclerView
+                            android:layout_marginTop="3dp"
                             android:id="@+id/recycler_list"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
