--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="blue">#0d6efd</color>
     <color name="text_color">#7b8e8f</color>
     <color name="text_color2">#FFFFFF</color>
+    <color name="text_color3">#FFFFFF</color>
     <color name="button">#7b8e8f</color>
     <color name="button2">#7C9FA0</color>
     <color name="orange">#FF5722</color>
@@ -25,4 +26,5 @@
     <color name="v4">#877439</color>
     <color name="v5">#a4c4d2</color>
     <color name="back">#6C7C7D</color>
+    <color name="cool_color">#A4BABB</color>
 </resources>
