--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
 
     <FrameLayout
@@ -12,12 +12,12 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        app:title="Photo"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:background="@color/toolbar_color"
         android:subtitleTextColor="@color/white"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:title="Photo" />
 
     <ru.senya.pixateka.view.viewFullscreen
         android:id="@+id/vfs"
