--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -13,7 +13,7 @@
         android:layout_height="52dp"
         android:background="@color/toolbar_color"
         android:title="Регистрация"
-        android:titleTextColor="@color/text_color2"/>
+        android:titleTextColor="@color/text_color2" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -42,7 +42,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:inputType="textEmailAddress"
-                    app:hint="Ваш логин"
+                    app:hint="Придумайте себе логин"
                     app:hint_color="@color/hint_color"
                     app:src="@drawable/pfp"
                     app:title="Логин" />
@@ -52,10 +52,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
-                    app:hint="Ваш пароль"
+                    app:hint="Придумайте пароль"
                     app:hint_color="@color/hint_color"
                     app:src="@drawable/password"
                     app:title="Пароль" />
+
+                <TextView
+                    android:id="@+id/show_password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="2dp"
+                    android:text="Показать пароль" />
+
 
                 <ru.senya.pixateka.view.InputField
                     android:id="@+id/input_repeat_password"
@@ -66,33 +74,39 @@
                     app:hint_color="@color/hint_color"
                     app:src="@drawable/password"
                     app:title="Повторный пароль" />
-
-                <ru.senya.pixateka.view.InputField
-                    android:id="@+id/input_first_name"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/show_r_password"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    app:hint="Ваше имя"
-                    app:hint_color="@color/hint_color"
-                    app:title="Имя" />
+                    android:layout_marginVertical="2dp"
+                    android:text="Показать пароль" />
 
-                <ru.senya.pixateka.view.InputField
-                    android:id="@+id/input_country"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    app:hint="Ваша страна"
-                    app:hint_color="@color/hint_color"
-                    app:title="Страна" />
+                <!--                <ru.senya.pixateka.view.InputField-->
+                <!--                    android:id="@+id/input_first_name"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:inputType="textPassword"-->
+                <!--                    app:hint="Ваше имя"-->
+                <!--                    app:hint_color="@color/hint_color"-->
+                <!--                    app:title="Имя" />-->
 
-                <ru.senya.pixateka.view.InputField
-                    android:id="@+id/input_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    app:hint="Ваша почта"
-                    app:hint_color="@color/hint_color"
-                    app:title="Почта" />
+                <!--                <ru.senya.pixateka.view.InputField-->
+                <!--                    android:id="@+id/input_country"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:inputType="textPassword"-->
+                <!--                    app:hint="Ваша страна"-->
+                <!--                    app:hint_color="@color/hint_color"-->
+                <!--                    app:title="Страна" />-->
+
+<!--                <ru.senya.pixateka.view.InputField-->
+<!--                    android:id="@+id/input_email"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:inputType="textPassword"-->
+<!--                    app:hint="Ваша почта"-->
+<!--                    app:hint_color="@color/hint_color"-->
+<!--                    app:title="Почта" />-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -112,7 +126,7 @@
                         android:layout_gravity="center"
                         android:backgroundTint="@color/button"
                         android:gravity="center"
-                        android:text="Выбрать фото"
+                        android:text="Выбрать аватарку"
                         android:textAlignment="center"
 
                         android:textColor="@color/white"
@@ -120,12 +134,12 @@
                 </LinearLayout>
 
 
-                <CheckBox
-                    android:id="@+id/checkbox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Принимаю условия пользовательского соглашения"
-                    android:textAlignment="textStart" />
+                <!--                <CheckBox-->
+                <!--                    android:id="@+id/checkbox"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:text="Принимаю условия пользовательского соглашения"-->
+                <!--                    android:textAlignment="textStart" />-->
 
 
                 <Button
